--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.7",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "marked": "^0.3.6",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
